# agentic_artificial_intelligence

./: .gitignore  README.md  env.example  pyproject.toml
agentic_ai/: __init__.py
agentic_ai/agents/: __init__.py  base.py  simple_agent.py  tool_agent.py
agentic_ai/tools/: __init__.py  base.py  calculator.py
agentic_ai/utils/: __init__.py  helpers.py  paths.py  setup.py
exercises/unit_00/: unit_00.ipynb
exercises/unit_01/: unit_01.ipynb
exercises/unit_02/: unit_02.ipynb
